tests/miniJava/neg/003002_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = true public int [] java ( ) { return 0 ; } ; } }
